--- a/index.html
+++ b/index.html
@@ -1,13 +1,44 @@
-<!DOCTYPE html>
+ <!DOCTYPE html>
 <html>
 <head>
-  <title>Home</title>
+  <title>Lachlan McDonell</title>
+<style>
+ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: #333333;
+}
+
+li {
+    float: left;
+}
+
+li a {
+    display: block;
+    color: white;
+    text-align: center;
+    padding: 16px;
+    text-decoration: none;
+}
+
+li a:hover {
+    background-color: #111111;
+}
+</style>
 </head>
 <body>
 
-<h1>This is a heading</h1>
+<ul>
+  <li><a href="#home">Home</a></li>
+  <li><a href="#contact">Contact</a></li>
+  <li><a href="#about">About</a></li>
+</ul>
 
-<p>This is a paragraph.</p>
+<h1>Welcome!<h1>
+  <p>Welcome to my site. This will be an ongoing project to test web formats, 
+    also a link to all of my media and a breif summmary of me.</p>
 
 </body>
-</html>
+</html> 
