--- a/index.html
+++ b/index.html
@@ -36,9 +36,12 @@ li a:hover {
   <li><a href="#about">About</a></li>
 </ul>
 
-<h1>Welcome!<h1>
-  <p>Welcome to my site. This will be an ongoing project to test web formats, 
+<h1 style="text-align:center">Welcome!<h1>
+ 
+<p>Welcome to my site. This will be an ongoing project to test web formats, 
     also a link to all of my media and a breif summmary of me.</p>
+ 
+ <img src="#" href="https://image.flaticon.com/icons/svg/3/3641.svg" alt="Github">
 
 </body>
 </html> 
