--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
  <!DOCTYPE html>
 <html>
 <head>
-  <title>Lachlan McDonell</title>
+  <title>An Aspiring Developer</title>
 <style>
 ul {
     list-style-type: none;
@@ -41,9 +41,16 @@ li a:hover {
 <h1 style="text-align:center;color:tomato;font-family: 'Lato', sans-serif;
            <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">Welcome!</h1>
  
-<p style="font-family: 'Lato', sans-serif;color:gray">Welcome to my site. This will be an ongoing project to test web formats, 
+<p style="text-align:center;font-family: 'Lato', sans-serif;color:gray">Welcome to my site. This will be an ongoing project to test web formats, 
     also a link to all of my media and a breif summmary of me.</p>
- 
+                                                     
+                                                    <hr> 
+<h2 style="text-align:center;color:orange;font-family: 'Lato', sans-serif;
+           <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">About Me</h2>
+ <p style="text-align:center;color:gray;font-family: 'Lato', sans-serif;
+           <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">Hi.<br />
+  My name is Lachlan McDonell, I'm an aspiring developer currently studying in year 10 at CGS. blah blah blah.</p>
+
  <a href="https://github.com/L4chlieM/l4chliem.github.io">
  <img src="https://image.flaticon.com/icons/svg/3/3641.svg" alt="Github" style="width:50px;height:50px">
  </a>
