--- a/index.html
+++ b/index.html
@@ -38,16 +38,16 @@ li a:hover {
   <li><a href="#about">About</a></li>
 </ul>
 
-<h1 style="text-align:center;color:tomato;font-family: 'Lato', sans-serif;
+<h1 style="font-size:150px;text-align:center;color:tomato;font-family: 'Lato', sans-serif;
            <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">Welcome!</h1>
  
-<p style="text-align:center;font-family: 'Lato', sans-serif;color:gray">Welcome to my site. This will be an ongoing project to test web formats, 
+<p style="font-size:50px;text-align:center;font-family: 'Lato', sans-serif;color:gray">Welcome to my site. This will be an ongoing project to test web formats, 
     also a link to all of my media and a breif summmary of me.</p>
                                                      
                                                     <hr> 
-<h2 style="text-align:center;color:orange;font-family: 'Lato', sans-serif;
+<h2 style="font-size:100px;text-align:center;color:orange;font-family: 'Lato', sans-serif;
            <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">About Me</h2>
- <p style="text-align:center;color:gray;font-family: 'Lato', sans-serif;
+ <p style="font-size:50px;text-align:center;color:gray;font-family: 'Lato', sans-serif;
            <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">Hi.<br />
   My name is Lachlan McDonell, I'm an aspiring developer currently studying in year 10 at CGS. blah blah blah.</p>
 
