--- a/index.html
+++ b/index.html
@@ -25,11 +25,10 @@
         <main>
          <div id="navcontainer">
              <ul id="navlist">
-                 <li id="active"><a href="#" id="current">Item one</a></li>
-                 <li><a href="#">Item two</a></li>
-                 <li><a href="#">Item three</a></li>
-                 <li><a href="#">Item four</a></li>
-                 <li><a href="#">Item five</a></li>
+                 <li id="active"><a href="#" id="current">I</a></li>
+                 <li><a href="#">enjoy</a></li>
+                 <li><a href="#">dank</a></li>
+                 <li><a href="#">memes</a></li>
              </ul>
          </div>
 
@@ -37,7 +36,8 @@
           <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">Welcome!</h1>
           </div>
       
-           <p style="font-size:20px;text-align:center;font-family: 'Lato', sans-serif;color:gray">Welcome to my site. This will be an ongoing project to test web formats, 
+           <p style="font-size:20px;text-align:center;font-family: 'Lato', sans-serif;color:gray">Welcome to my site. 
+              This will be an ongoing project to test web formats, 
         also a link to all of my media and a breif summmary of me.</p>
 <hr> 
        <h2 style="font-size:50px;text-align:center;color:orange;font-family: 'Lato', sans-serif;
